Remake of net.ontopia.topicmaps.entry tests for Maven